--- a/index.html
+++ b/index.html
@@ -1,32 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <title>Edie Home Page</title>
 </head>
+
 <body>
-    
-   <div class="container-page">
-       <div class="container-main">
-           <nav>
-            <div class="logo">Edie</div>
-            <div class="routes">
-                <a href="">Home</a>
-                <a href="">Services</a>
-                <a href="">Our Works</a>
-                <a href="">Clients</a>
-                <a href="">Contact</a>
-             </div>
-           </nav>
 
-           <div class="container-body">
+    <div class="container-page">
+        <div class="container-main">
+            <nav>
+                <div class="logo">Edie</div>
+                <div class="routes">
+                    <a href="#home">Home</a>
+                    <a href="#services">Services</a>
+                    <a href="#work">Our Works</a>
+                    <a href="#client">Clients</a>
+                    <a href="#contact">Contact</a>
+                </div>
+            </nav>
 
-           </div>
-       </div>
-   </div>
+            <div class="container-body">
 
-<script src="/src/app.js"></script>    
+                <div class="home" id="home">
+
+                    <div class="home-sub-one">
+                        <p>Unhappy with your website?</p>
+                        <h1>We create beautiful and fast web services</h1>
+                    </div>
+
+                    <img src="/images/heroImage.jpg" alt="">
+
+                    <div class="home-sub-two">
+
+                        <h1>Story, emotion and purpose</h1>
+                        <p>We help transform your ideas into real world applications that will outperform your toughest
+                            competition and help you achieve your strategic goals in short period of time.</p>
+                        <br>
+                        <br>
+                        <small>Want us to contact you?</small>
+                        <div class="email-signup">
+                            <input type="text" placeholder="Email"><button class="email-join">Join</button>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="services" id="services">
+
+                    <h1>We offer high demand services </h1>
+                    <div class="service-cards">
+                        <div class="one card">
+
+                            <div class="icon blue"><img src="/images/edit-24px.svg"></div>
+                            <h3>UI/UX Design</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat
+                                aliquet id quis turpis.</p>
+                            <button>Get Started</button>
+
+                        </div>
+                        <div class="two card">
+
+                            <div class="icon green"><img src="/images/code-24px.svg"></div>
+                            <h3>Front End</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat
+                                aliquet id quis turpis.</p>
+                            <button>Get Started</button>
+
+                        </div>
+                        <div class="three card">
+
+                            <div class="icon red"><img src="/images/storage-24px.svg"></div>
+                            <h3>Back End</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a metus ac nulla consequat
+                                aliquet id quis turpis.</p>
+                            <button>Get Started</button>
+
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="work" id="work">
+
+                    <h1>Good design means good business</h1>
+
+                    <div class="work-box a">
+                        <div class="ima">
+                            <img src="/images/smarthome.jpg">
+                            <small>Full stack application</small>
+                            <p>Smart home dashboard</p>
+                        </div>
+                        <div class="ima odd">
+                            <img src="/images/onboard.png">
+                            <small>UX/UI design</small>
+                            <p>Onboard application</p>
+                        </div>
+                    </div>
+                    <div class="work-box b">
+                        <div class="imb">
+                            <img src="/images/booking.png">
+                            <small>Mobile application</small>
+                            <p>Booking system</p>
+                        </div>
+                        <div class="imb odd">
+                            <img src="/images/juice-product.png">
+                            <small>Front End applicati on</small>
+                            <p>Juice product homepage</p>
+                            <p class="seemore">see more →</p>
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+                <div class="client" id="client">
+
+
+
+                    <div class="client-content">
+                        <p>Meet the team</p>
+                        <h1>We are chilled and a laidback team</h1>
+                        <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</small>
+                    </div>
+
+                    <div class="client-images">
+
+                        <img class="cla bdr" src="/images/person3.png" alt="">
+
+
+                        <div>
+                            <img class="clb bdr" src="/images/person1.png" alt="">
+                            <img class="clc bdr" src="/images/person2.png" alt="">
+                        </div>
+
+                    </div>
+
+
+
+
+                </div>
+
+                <div class="testimonial" id="testimonial">
+                    <h1>“Fast and outstanding resutls. Edie understands their customer’s needs. They have a young and
+                        talented team.” </h1>
+
+                    <div class="testi-content">
+                        <img src="/images/person4.png">
+                        <aside>
+                            <p>Carlos Tran</p>
+                            <small>The Decorate Gatsby</small>
+                        </aside>
+                    </div>    
+
+                </div>
+
+                <footer class="contact">
+                 
+                    <div class="footer-content">
+                        <div class="footer-one">
+
+                            <a href="#home">Home</a>
+                            <a href="#services">Services</a>
+                            <a href="#work">Our Works</a>
+                            <a href="#client">Clients</a>
+                            <a href="#contact">Contact</a>
+
+                        </div>
+                        <div class="footer-two">
+
+                            <div class="logo">Edie</div>
+                            <div>
+                                <img src="/images/instagram.svg" alt="">
+                                <img src="/images/linkedin.svg" alt="">
+                                <img src="/images/twitter.svg" alt="">
+                            </div>
+
+                        </div>
+                        <div class="footer-three">
+                            <small>Want us to contact you?</small>
+                            <div class="email-signup">
+                                <input type="text" placeholder="Email"><button class="email-join">Join</button>
+                            </div>
+                        </div>
+                    </div>
+
+                    Akhil Venkatesh @ DevChallenges.io
+
+                </footer>
+
+            </div>
+        </div>
+    </div>
+
+    <script src="/src/app.js"></script>
 </body>
+
 </html>
