--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
                 </div>
 
-                <footer class="contact">
+                <footer class="contact"  id="contact">
                  
                     <div class="footer-content">
                         <div class="footer-one">
@@ -185,7 +185,7 @@
                         <div class="footer-three">
                             <small>Want us to contact you?</small>
                             <div class="email-signup">
-                                <input type="text" placeholder="Email"><button class="email-join">Join</button>
+                                <input type="text" placeholder="Email"><button class="email-join billroth">Join</button>
                             </div>
                         </div>
                     </div>
