--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <br>
                         <small>Want us to contact you?</small>
 
-                        <div style="position: relative; width: 480px;">
+                        <div style="position: relative; ">
                             <div class="email-signup">
                                 <input type="text" placeholder="Email"><button class="email-join">Join</button>
                             </div>
